src/Base/main/default/objects/SurveyTaker__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <description>Time to complete survey in minutes</description>
    <label>Completion Time</label>
    <type>DateTime</type>
</CustomField>