src/Base/main/default/objects/SurveyTaker__c/fields/Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys Taken (Contact)</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>