src/Base/main/default/objects/SurveyTaker__c/fields/Link_to_Response__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Response__c</fullName>
    <description>Link to customer&#39;s response</description>
    <label>Link to Response</label>
    <type>Url</type>
</CustomField>