src/Base/main/default/objects/SurveyTaker__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>